--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile 'org.seleniumhq.selenium:selenium-java:2.53.0'    
+    compile 'org.seleniumhq.selenium:selenium-chrome-driver:2.23.0'
+
+    
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
