--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile 'org.seleniumhq.selenium:selenium-java:2.53.0'    
     compile 'org.seleniumhq.selenium:selenium-chrome-driver:2.23.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
 
     
     testCompile group: 'junit', name: 'junit', version: '4.+'
